--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,12 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto', 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgba(127, 226, 255, 0.06);
+  background-color: #f7f9fb;
 }
 
 code {
@@ -25,14 +25,14 @@ code {
 .card {
   display: flex;
   flex-direction: column;
-  box-sizing: border-box;
+  width: 49%;
   margin-bottom: 5%;
-  width: 47%;
   height: 500px;
   border-style: solid;
   border-width: thin;
   border-color: rgba(220, 241, 253, 0.98);
-  background-color: rgba(220, 241, 253, 0.98);
+  background-color: #fff;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .card > a {
@@ -57,22 +57,24 @@ code {
 }
 
 .nav-btn {
-  background-color: #add8e6;
+  background-color: #31708e;
   padding: 10px 20px;
-  margin-right: 15px;
-  border-radius: 10px;
-  border-style: solid;
-  border-width: medium;
-  border-color: #add8e6;
+  margin-right: 10px;
+  border-radius: 5px;
   text-decoration: none;
-  color: #000000;
+  color: #f7f9fb;
   vertical-align: middle;
   transition: color 200ms, background-color 500ms;
+  width: 10rem;
+  text-align: center;
 }
+
 .back {
   cursor: pointer;
 }
-.nav-btn:hover {
+
+.nav-btn:hover,
+.active {
   background-color: #3078c1;
   color: #f7f9fb;
 }
@@ -89,7 +91,6 @@ code {
   border: 1px solid #ced4da;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .search-input:focus {
@@ -97,12 +98,6 @@ code {
   background-color: #fff;
   border-color: #80bdff;
   outline: 0;
-}
-
-.active {
-  border-width: medium;
-  border-style: solid;
-  border-color: #4bb6d9;
 }
 
 .search-container {
@@ -117,6 +112,8 @@ code {
 .card-image {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: top;
 }
 
 .card-title {
@@ -124,6 +121,7 @@ code {
   margin-top: 10px;
   padding: 0 10px;
 }
+
 .card-title > h3 {
   margin: 0;
   text-align: justify;
@@ -135,11 +133,9 @@ code {
   justify-content: center;
   align-items: center;
 }
-
 .error {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .no-results {
@@ -166,17 +162,18 @@ code {
 .overview-text {
   text-align: justify;
 }
+
 .page404 {
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 @media screen and (max-width: 760px) {
   .card {
     width: 100%;
     height: 500px;
-    background-color: lightblue;
   }
 
   .details-media {
@@ -189,6 +186,5 @@ code {
   .card {
     width: 100%;
     height: 400px;
-    background-color: lightblue;
   }
 }
